# devops-IDE

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: go.mod  go.sum  main.go
electron/: main.js  preload.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/DevOpsTools/: ContainersPanel.tsx  GitPanel.tsx  JenkinsPanel.tsx  KubernetesPanel.tsx  PrometheusPanel.tsx  index.tsx
src/components/Editor/: CodeEditor.tsx  Editor.tsx
src/components/FileExplorer/: CreateFileModal.tsx  DraggableFile.tsx  FileContextMenu.tsx  FileExplorer.tsx  FileProperties.tsx  FileSearchResults.tsx  FileToolbar.tsx  FileTree.tsx  FileTreeItem.tsx  types.ts
src/components/Header/: Header.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Terminal/: IntegratedTerminal.tsx  Terminal.tsx  TerminalCommands.ts  TerminalManager.ts  TerminalTabs.tsx
src/components/aws/: AWSOverview.tsx
src/components/common/: MetricsChart.tsx  (+2 more)
src/contexts/: ThemeContext.tsx  ToolContext.tsx
src/hooks/: useFileSearch.ts  useFileSelection.ts  useFileSystem.ts  useJenkins.ts  useKeyboardShortcuts.ts  useKubernetes.ts  usePrometheus.ts  useSearch.ts  useTerminal.ts
src/lib/: api.ts  axios.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/routes/: index.tsx
src/services/: api.ts  aws.ts  github.ts  jenkins.ts  kubernetes.ts  prometheus.ts  terraform.ts
src/stores/: auth.ts
src/types/: index.ts  search.ts
src/utils/: error-handler.ts  test-utils.tsx
(+56 files in other folders)
