[package]
name = "devops-ide"
version = "0.1.0"
description = "A DevOps IDE built with Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["shell-open"] }
tokio = { version = "1.36.0", features = ["full"] }
bollard = "0.15.0"

[features]
custom-protocol = ["tauri/custom-protocol"]